# autosuggest-cli

./: .gitattributes  .gitignore  BASH_PORTING_NOTES.txt  DESIGN_DOC.txt  Makefile  QUICKSETUP.txt  QUICKSTART.txt  README.md  SHELL_SETUP.txt  START_HERE.txt  USER_GUIDE.txt  install-linux.sh  project_canvas.md  pyproject.toml  setup-suggest.sh
contrib/: autosuggest-daemon.service  autosuggest.1
docs/: BUSINESS_CASE.md  PRESENTATION.md  QUICKSTART.txt  USER_GUIDE.txt
docs/archive/: ARCHITECTURE.md  NEXT_STEPS_FEATURE_DOC.txt  SESSION2_DESIGN_DOC.txt  routines.md  schema.sql
docs/design/: BASH_PORTING_NOTES.txt  DESIGN_DOC.txt
docs/guides/: USER_GUIDE.txt
src/autosuggest/: arg_completers.py  benchmark.py  daemon.py  engine.py  hooks.py  importer.py  launcher.py  main.py  metrics.py  migrate.py  next_steps.py  nextsteps_cli.py  paths.py  query.py  record.py  redact.py  schema.sql  seed.py  seed_commands.json  selftest.py  shell_session.py  start.py  stats.py  tcsh_precmd.py  workflows.yaml
tests/: conftest.py  manual_test_env_tcsh.csh  test_arg_completers.py  test_daemon.py  test_engine.py  test_env_commands.py  test_hooks.py  test_importer.py  test_paths.py  test_record.py  test_redact.py  test_selftest.py  test_shell_session.py  test_stats.py  test_workflows.py
