[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-autosuggest"
version = "0.1.0"
description = "A context-aware CLI autosuggestion engine."
readme = "project_canvas.md"
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
autosuggest = "autosuggest.launcher:main"
suggest = "autosuggest.main:run"
suggest-start = "autosuggest.start:main"
suggest-daemon = "autosuggest.daemon:run_daemon"
suggest-import = "autosuggest.importer:run_import"
suggest-hook = "autosuggest.hooks:run_hook"
suggest-nextsteps = "autosuggest.nextsteps_cli:main"
suggest-stats = "autosuggest.stats:run"
suggest-seed = "autosuggest.seed:run_seed"

[tool.setuptools.package-data]
autosuggest = ["schema.sql", "workflows.yaml", "seed_commands.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
